--- a/Bigmart_sales_analysis.ipynb
+++ b/Bigmart_sales_analysis.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Hqsm6Ig8vKWVfR4zv2DKKZuzhgSBXhHc",
-      "authorship_tag": "ABX9TyNj2i5D3ZGbbyHgYbyM968t",
+      "authorship_tag": "ABX9TyMW04/h4rj5RiGQAV7mbsyL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8193,6 +8193,16 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Conclusion:***\n",
+        "The machine learning model developed in this project provides a reliable means to predict sales at BigMart outlets. By leveraging this model, BigMart can enhance inventory management, reduce stockouts, and improve overall profitability. The project also highlights the importance of continuous data analysis and model refinement to keep up with changing market dynamics."
+      ],
+      "metadata": {
+        "id": "tN452auIeS8o"
+      }
     }
   ]
 }
