--- a/Bigmart_sales_analysis.ipynb
+++ b/Bigmart_sales_analysis.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Hqsm6Ig8vKWVfR4zv2DKKZuzhgSBXhHc",
-      "authorship_tag": "ABX9TyOgf05/naeqOwPLO4Pt+1Up",
+      "authorship_tag": "ABX9TyMLMNNK3wZRGEzNOzEDSWv5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8197,7 +8197,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***Conclusion:***\n",
+        "**summary**\n",
+        "\n",
         "The BigMart Sales Analysis project focuses on predicting the sales of various products across different outlets using machine learning techniques. The objective is to develop a model that accurately forecasts sales, aiding BigMart in optimizing inventory, improving supply chain management, and enhancing overall decision-making processes.\n",
         "\n",
         "***Data Overview:***\n",
