--- a/Bigmart_sales_analysis.ipynb
+++ b/Bigmart_sales_analysis.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Hqsm6Ig8vKWVfR4zv2DKKZuzhgSBXhHc",
-      "authorship_tag": "ABX9TyMLMNNK3wZRGEzNOzEDSWv5",
+      "authorship_tag": "ABX9TyML+aWvt/Ut8UErlkGo62aM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4441,7 +4441,8 @@
     {
       "cell_type": "code",
       "source": [
-        "imputer=SimpleImputer(strategy='mean')\n"
+        "imputer=SimpleImputer(strategy='mean')\n",
+        "# create SimpleImputer object for mean imputation in the TRAIN SET\n"
       ],
       "metadata": {
         "id": "g71O3E8qpsp1"
@@ -4452,7 +4453,8 @@
     {
       "cell_type": "code",
       "source": [
-        "cols_with_missing=[\"Item_Weight\",'Outlet_Size']"
+        "cols_with_missing=[\"Item_Weight\",'Outlet_Size']\n",
+        "# select columns with missing values"
       ],
       "metadata": {
         "id": "AW9EoOUxpwrR"
@@ -4463,7 +4465,8 @@
     {
       "cell_type": "code",
       "source": [
-        "train[cols_with_missing]=imputer.fit_transform(train[cols_with_missing])\n"
+        "train[cols_with_missing]=imputer.fit_transform(train[cols_with_missing])\n",
+        "# impute missing values in selected columns"
       ],
       "metadata": {
         "id": "KooLhvq3p7l_"
